refactor: replace .collect(Collectors.toList()) with .toList() (#544)
Motivation:
Java 16+ Stream.toList() provides a concise way to collect stream
elements into an unmodifiable list.

Modification:
Replace .collect(Collectors.toList()) with .toList() across 3 files.
Remove unused Collectors imports.

Result:
Cleaner stream collection code using Java 17 API.

Tests:
Not run - compile-only test file changes

References:
None - Java 17 API modernization