@@ -35,7 +35,6 @@ import org.apache.pekko.projection.testkit.javadsl.ProjectionTestKit;
 import java.time.Duration;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 // #testkit-duration
@@ -122,7 +121,7 @@ public class TestKitDocExample {
 
     // #testkit-testprojection
     List<Pair<Integer, String>> testData =
-        Stream.of(Pair.create(0, "abc"), Pair.create(1, "def")).collect(Collectors.toList());
+        Stream.of(Pair.create(0, "abc"), Pair.create(1, "def")).toList();
 
     Source<Pair<Integer, String>, NotUsed> source = Source.from(testData);
 
